# seewhy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
mermaids/: diffusion.mmd
projects/: index.md
projects/TEMPLATES/: project_end.md  project_start.md
projects/component-analysis/: .gitignore  concepts.md  experiments1.py  experiments2.py  experiments3.py  experiments4.py  experiments5.py  experiments6.py  experiments6a.py  experiments7.py  results.jsonl  workflow.md
projects/diveq/: experiments1.py  experiments10.py  experiments11.py  experiments12.py  experiments13.py  experiments14.py  experiments15.py  experiments16.py  experiments17.py  experiments18.py  experiments19.py  experiments2.py  experiments20.py  experiments21.py  experiments22.py  experiments23.py  experiments24.py  experiments25.py  experiments26.py  experiments27.py  experiments28.py  experiments29.py  experiments3.py  experiments30.py  experiments31.py  experiments32.py  experiments33.py  experiments34.py  experiments35.py  experiments36.py  experiments37.py  experiments38.py  experiments39.py  experiments4.py  experiments40.py  experiments41.py  experiments42.py  experiments43.py  experiments44.py  experiments45.py  (+22 more)
projects/ema-feature/: workflow.md
projects/ema-viz/: exp1.py  exp2.py  results.jsonl  workflow.md
projects/es/: experiments1.py  experiments10.py  experiments11.py  experiments12.py  experiments13.py  experiments14.py  experiments2.py  (+29 more)
shared_lib/: datasets.py  html.py  media.py  r2.py  random_utils.py  report.py
test-scripts/: test_datasets.py  test_media.py
(+1086 files in other folders)
