[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seewhy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[jax]>=4.0.0",
    "jax[cuda12]>=0.7.0",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.uv]
package = true
