[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seewhy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[jax]>=4.4.1",
    "jax[cuda13]>=0.8.1",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
include = ["shared_lib*"]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
